# QML

CalculatorApp/: CalculatorApp.pro  CustomButton.qml  NumberPad.qml  main.qml
CalculatorModel/: CalculatorModel.pro  CalculatorViewModel.cpp  CalculatorViewModel.h  main.cpp  main.qml
CallHistoryUI/: CMakeLists.txt  main.cpp  main.qml
Column_Layout/: CMakeLists.txt  main.cpp  main.qml
Example1/: CMakeLists.txt  main.cpp  main.qml
Example2/: CMakeLists.txt  main.cpp  main.qml
Example3/: CMakeLists.txt  main.cpp  main.qml
Example4/: CMakeLists.txt  main.cpp
Example_on_Model_view_Delegate/: CMakeLists.txt  Contact.cpp  Contact.h  ContactModel.cpp  ContactModel.h  ShowList.qml  main.cpp  main.qml  qml.qrc
ItemType/: CMakeLists.txt  main.cpp  main.qml
ListViewPhoneBook/: CMakeLists.txt  contact.cpp  contact.h  contactmodel.cpp  contactmodel.h  main.cpp
ListViewTaskMVD/: CMakeLists.txt  CallHistoryHeader.qml  PhoneBookHeader.qml  WhatsappHeader.qml  callhistory.cpp  callhistory.h  contact.cpp  contact.h  contactdatamodel.cpp  contactdatamodel.h  main.cpp  main.qml  phonebook.cpp  phonebook.h  whatsapp.cpp  whatsapp.h
ListViewTaskMVD/data/: personInfo.csv
LoadPage/: CMakeLists.txt  main.cpp  page1.qml  page5.qml
Loader/: CMakeLists.txt  main.cpp  main.qml  page3.qml
LoginApp/: CMakeLists.txt  Header.qml  HomePage.qml  StudentsList.qml  main.cpp  student.cpp  student.h  studentviewmodel.cpp  studentviewmodel.h
LoginQML/: CMakeLists.txt  login.cpp  login.h  main.cpp
ModelViewDelegate/: Header.qml  main.qml
My_Example/Login/: CMakeLists.txt  main.cpp  main.qml  resources.qrc
My_GridLayout/: CMakeLists.txt  main.cpp  main.qml
My_Layout/: CMakeLists.txt  main.cpp  main.qml
My_StackView/: CMakeLists.txt  main.cpp  main.qml
PhoneBookModel/: AddContact.qml  Contact.cpp  Contact.h  ContactList.qml  ContactModel.cpp  ContactModel.h  CustomButton.qml  Header.qml  PhoneBookModel.pro  ShowContactInfo.qml  main.cpp  main.qml  qml.qrc
QMLTask/: Button1.qml  Button2.qml  Button3.qml  CMakeLists.txt  main.cpp  main.qml
Row/: CMakeLists.txt  main.cpp  main.qml
Row_Layout/: CMakeLists.txt  main.cpp  main.qml
Task/: CMakeLists.txt  main.cpp  main.qml
WhatsappUI/: CMakeLists.txt  main.cpp  main.qml
session1/: CMakeLists.txt  main.cpp  main.qml
